infra/k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-service
  annotations:
    cloud.google.com/backend-config: '{"default":"devops-backendconfig"}'

spec:
  type: ClusterIP

  selector:
    app: devops-service

  ports:
    - port: 80
      targetPort: 8080
