infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: devops-service
      port:
        number: 80
